# CraftUniverse

./: .buildconfig  AUTHORS  README.md  craftuniverse.doap  meson.build
data/: craftuniverse.gresource.xml  meson.build  org.gnome.Craftuniverse.appdata.xml.in  org.gnome.Craftuniverse.desktop.in  org.gnome.Craftuniverse.gschema.xml
data/ui/: AboutWindow.ui  AuthWindow.ui  MainWindow.ui  MainWindow.ui~  SettingsWindow.ui
po/: POTFILES  meson.build
src/: AuthWindow.vala  Build.vala  MainWindow.vala  Settings.vala  SettingsWindow.vala  StarterWindow.vala  User.vala  craftuniverse.gresource.xml  main.vala  meson.build
src/core/: Build.vala  Settings.vala  TaskData.vala  User.vala  Utils.vala
src/res/: AuthWindow.ui  MainWindow.ui  SettingsWindow.ui  StarterWindow.ui
src/ui/: AuthWindow.vala  MainWindow.vala  SettingsWindow.vala  StarterWindow.vala
